--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,13 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer base {
+    #app {
+        font-family: Avenir, Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-align: center;
+        color: #333;
+    }
+}
