Updated UI to use HeadlessUI select

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -13,3 +13,97 @@
         color: #333;
     }
 }
+
+@layer components {
+    input[type=range] {
+        margin: 0;
+        background-color: transparent;
+        -webkit-appearance: none;
+      }
+      input[type=range]:focus {
+        outline: none;
+      }
+      input[type=range]::-webkit-slider-runnable-track {
+        background: #E5E7EB;
+        border: 1px solid #9CA3AF;
+        border-radius: 25px;
+        height: 8px;
+        cursor: pointer;
+      }
+      input[type=range]::-webkit-slider-thumb {
+        margin-top: -6px;
+        width: 18px;
+        height: 18px;
+        background: #3b82f6;
+        border: 0px solid rgba(0, 0, 0, 0);
+        border: 0;
+        border-radius: 15px;
+        cursor: pointer;
+        -webkit-appearance: none;
+      }
+      input[type=range]:focus::-webkit-slider-runnable-track {
+        background: #9CA3AF;
+      }
+      input[type=range]::-moz-range-track {
+        background: rgba(229, 231, 235, 0.78);
+        border: 0;
+        border-radius: 25px;
+        height: 11.4px;
+        cursor: pointer;
+      }
+      input[type=range]::-moz-range-thumb {
+        width: 18px;
+        height: 18px;
+        background: #3b82f6;
+        border: 0px solid rgba(0, 0, 0, 0);
+        border: 0;
+        border-radius: 15px;
+        cursor: pointer;
+      }
+      input[type=range]::-ms-track {
+        background: transparent;
+        border-color: transparent;
+        border-width: 7.3px 0;
+        color: transparent;
+        width: 100%;
+        height: 11.4px;
+        cursor: pointer;
+      }
+      input[type=range]::-ms-fill-lower {
+        background: #dfe2e7;
+        border: 0;
+        border-radius: 50px;
+      }
+      input[type=range]::-ms-fill-upper {
+        background: rgba(229, 231, 235, 0.78);
+        border: 0;
+        border-radius: 50px;
+      }
+      input[type=range]::-ms-thumb {
+        width: 26px;
+        height: 26px;
+        background: #3b82f6;
+        border: 0px solid rgba(0, 0, 0, 0);
+        border: 0;
+        border-radius: 15px;
+        cursor: pointer;
+        margin-top: 0px;
+        /*Needed to keep the Edge thumb centred*/
+      }
+      input[type=range]:focus::-ms-fill-lower {
+        background: #4B5563;
+      }
+      input[type=range]:focus::-ms-fill-upper {
+        background: #ebecef;
+      }
+      /*TODO: Use one of the selectors from https://stackoverflow.com/a/20541859/7077589 and figure out
+      how to remove the virtical space around the range input in IE*/
+      @supports (-ms-ime-align:auto) {
+        /* Pre-Chromium Edge only styles, selector taken from hhttps://stackoverflow.com/a/32202953/7077589 */
+        input[type=range] {
+          margin: 0;
+          /*Edge starts the margin from the thumb, not the track as other browsers do*/
+        }
+      }
+      
+}
